// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmRejectInviteDialog can hide safety options 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-describedby="mx_Dialog_content"
    aria-labelledby="mx_BaseDialog_title"
    class="mx_ConfirmRejectInviteDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Reject invitation
      </h1>
    </div>
    <form
      class="_root_19upo_16"
    >
      <p>
        Are you sure you want to reject the invitation?
      </p>
      <div
        class="mx_Dialog_buttons"
      >
        <span
          class="mx_Dialog_buttons_row"
        >
          <button
            data-testid="dialog-cancel-button"
            type="button"
          >
            Cancel
          </button>
          <button
            class="mx_Dialog_primary danger"
            data-testid="dialog-primary-button"
            type="button"
          >
            Reject invite
          </button>
        </span>
      </div>
    </form>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`ConfirmRejectInviteDialog can reject with options selected 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    aria-describedby="mx_Dialog_content"
    aria-labelledby="mx_BaseDialog_title"
    class="mx_ConfirmRejectInviteDialog mx_Dialog_fixedWidth"
    data-focus-lock-disabled="false"
    role="dialog"
  >
    <div
      class="mx_Dialog_header"
    >
      <h1
        class="mx_Heading_h3 mx_Dialog_title"
        id="mx_BaseDialog_title"
      >
        Reject invitation
      </h1>
    </div>
    <form
      class="_root_19upo_16"
    >
      <p>
        Are you sure you want to reject the invitation?
      </p>
      <div
        class="_inline-field_19upo_32"
      >
        <div
          class="_inline-field-control_19upo_44"
        >
          <div
            class="_container_1hel1_10"
          >
            <input
              class="_input_1hel1_18"
              id="mx_ConfirmRejectInviteDialog_ignore_user"
              type="checkbox"
            />
            <div
              class="_ui_1hel1_19"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="_inline-field-body_19upo_38"
        >
          <label
            class="_label_19upo_59"
            for="mx_ConfirmRejectInviteDialog_ignore_user"
          >
            Ignore user
          </label>
          <span
            class="_message_19upo_85 _help-message_19upo_91"
            id="radix-:rf:"
          >
            You will not see any messages or room invites from this user.
          </span>
        </div>
      </div>
      <div
        class="_inline-field_19upo_32"
      >
        <div
          class="_inline-field-control_19upo_44"
        >
          <div
            class="_container_1hel1_10"
          >
            <input
              class="_input_1hel1_18"
              id="mx_ConfirmRejectInviteDialog_report_room"
              type="checkbox"
            />
            <div
              class="_ui_1hel1_19"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.55 17.575q-.2 0-.375-.062a.9.9 0 0 1-.325-.213L4.55 13q-.274-.274-.262-.713.012-.437.287-.712a.95.95 0 0 1 .7-.275q.425 0 .7.275L9.55 15.15l8.475-8.475q.274-.275.713-.275.437 0 .712.275.275.274.275.713 0 .437-.275.712l-9.2 9.2q-.15.15-.325.212a1.1 1.1 0 0 1-.375.063"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="_inline-field-body_19upo_38"
        >
          <label
            class="_label_19upo_59"
            for="mx_ConfirmRejectInviteDialog_report_room"
          >
            Report room
          </label>
          <span
            class="_message_19upo_85 _help-message_19upo_91"
            id="radix-:rh:"
          >
            Report this room to your homeserver admin. This will send the room's unique ID, but if messages are encrypted, the administrator won't be able to read them or view shared files.
          </span>
          <div
            class="_field_19upo_26"
          >
            <label
              class="_label_19upo_59"
              for="mx_ConfirmRejectInviteDialog_reason"
            >
              Reason
            </label>
            <span
              class="_message_19upo_85 _help-message_19upo_91"
              id="radix-:rj:"
            >
              This reason will only be shared with your homeserver administrator.
            </span>
            <input
              class="_control_sqdq4_10"
              id="mx_ConfirmRejectInviteDialog_reason"
              placeholder="Reason for reporting..."
              value="I want to report this room"
            />
          </div>
        </div>
      </div>
      <div
        class="mx_Dialog_buttons"
      >
        <span
          class="mx_Dialog_buttons_row"
        >
          <button
            data-testid="dialog-cancel-button"
            type="button"
          >
            Cancel
          </button>
          <button
            class="mx_Dialog_primary danger"
            data-testid="dialog-primary-button"
            type="button"
          >
            Reject invite
          </button>
        </span>
      </div>
    </form>
    <div
      aria-label="Close dialog"
      class="mx_AccessibleButton mx_Dialog_cancelButton"
      role="button"
      tabindex="0"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;
